// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-typed-css-modules > should apply css-modules-typescript-loader 1`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "use": [
      {
        "loader": "<ROOT>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<ROOT>/packages/plugin-typed-css-modules/src/loader.cjs",
        "options": {
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
        },
      },
      {
        "loader": "<ROOT>/packages/core/compiled/css-loader",
        "options": {
          "importLoaders": 1,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "<ROOT>/packages/core/compiled/postcss-loader",
        "options": {
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "browsers": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": false,
        },
      },
    ],
  },
]
`;

exports[`plugin-typed-css-modules > should not apply css-modules-typescript-loader 1`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "use": [
      {
        "loader": "<ROOT>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<ROOT>/packages/core/compiled/css-loader",
        "options": {
          "importLoaders": 1,
          "modules": {
            "auto": false,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "<ROOT>/packages/core/compiled/postcss-loader",
        "options": {
          "postcssOptions": {
            "config": false,
            "plugins": [
              {
                "browsers": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
                "info": [Function],
                "options": {
                  "flexbox": "no-2009",
                  "overrideBrowserslist": [
                    "chrome >= 87",
                    "edge >= 88",
                    "firefox >= 78",
                    "safari >= 14",
                  ],
                },
                "postcssPlugin": "autoprefixer",
                "prepare": [Function],
              },
            ],
          },
          "sourceMap": false,
        },
      },
    ],
  },
]
`;
